--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -1,8 +1,8 @@
 <div id="disqus_thread"></div>
   <script type="text/javascript">
     var disqus_config = function () {
-      this.page.url = "https://supergrape.github.io/blogs/";
-      this.page.identifier = "https://supergrape.github.io/blogs/";
+      this.page.url = "https://supergrapee.github.io/blogs/";
+      this.page.identifier = "https://supergrapee.github.io/blogs/";
     };
 
     // You should be able to get the following lines of code from your Disqus admin.
